--- a/src/main/webapp/static/box-component.html
+++ b/src/main/webapp/static/box-component.html
@@ -23,7 +23,8 @@
 		<link href="/static/styles/css/ie8andbelow.css" rel="stylesheet"/>
 
 	  	<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-	    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+	  <script src="static/script/lib/html5shiv.min.js"></script>
+          <!-- <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>-->
 	  <![endif]-->
 	  <!--[if lt IE 8]>
 		<link href="/static/styles/css/ie7andbelow.css" rel="stylesheet"/>
